panel fixed to lessen white space

--- a/client/src/stylesheets/css/main.css
+++ b/client/src/stylesheets/css/main.css
@@ -648,15 +648,16 @@ li {
   margin-left: 9vw;
   margin-top: 2%; }
 
+.panel-heading {
+  background-color: #F99E1C;
+  border: 2px solid #F99E1C;
+  border-radius: 0; }
+
 .panel-header {
   color: white;
   font-size: 4rem;
   letter-spacing: 0.5rem;
-  background-color: #F99E1C;
-  border: 2px solid #F99E1C;
-  height: 100%;
-  width: 100%;
-  padding: 2rem 1rem 2rem 1.5rem;
+  padding: 1rem 0.5rem 1rem 0.5rem;
   margin-top: 0; }
 
 .recipe-notes {
